--- a/index.html
+++ b/index.html
@@ -469,8 +469,8 @@
                 </div>
 
                 <!-- Whitepaper Card (Full Width) -->
-                <div
-                    class="md:col-span-2 glass-panel p-6 md:p-8 rounded-3xl border border-white/10 relative overflow-hidden group">
+                <a href="whitepaper2026.html"
+                    class="md:col-span-2 glass-panel p-6 md:p-8 rounded-3xl border border-white/10 relative overflow-hidden group block hover:border-neon-cyan/30 transition-all cursor-pointer">
                     <div
                         class="absolute top-0 right-0 p-32 bg-neon-purple/20 blur-[100px] pointer-events-none group-hover:bg-neon-purple/30 transition-colors">
                     </div>
@@ -479,29 +479,32 @@
                             <div
                                 class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-white/5 border border-white/10 text-neon-cyan text-xs font-mono font-bold mb-4">
                                 <i data-lucide="file-text" class="w-3 h-3"></i>
-                                WHITEPAPER 2024
+                                WHITEPAPER 2026
                             </div>
-                            <h3 class="font-display text-2xl md:text-3xl font-bold mb-2">AI Agents in Cybersecurity</h3>
-                            <p class="text-gray-400 mb-6">Deep dive into how autonomous agents are reshaping threat
+                            <h3
+                                class="font-display text-2xl md:text-3xl font-bold mb-2 group-hover:text-white transition-colors">
+                                AI Agents in Cybersecurity</h3>
+                            <p class="text-gray-400 mb-6 group-hover:text-gray-300 transition-colors">Deep dive into how
+                                autonomous agents are reshaping threat
                                 detection and personal defense strategies.</p>
-                            <a href="#"
+                            <span
                                 class="inline-flex items-center gap-2 text-white font-bold hover:text-neon-cyan transition-colors group/link">
-                                <span>Read the Report</span>
+                                <span class="group-hover:text-neon-cyan transition-colors">Read the Report</span>
                                 <i data-lucide="arrow-right"
-                                    class="w-4 h-4 group-hover/link:translate-x-1 transition-transform"></i>
-                            </a>
+                                    class="w-4 h-4 group-hover:translate-x-1 group-hover:text-neon-cyan transition-all"></i>
+                            </span>
                         </div>
                         <div
-                            class="w-full md:w-1/3 aspect-[4/3] bg-black/50 rounded-xl border border-white/10 flex items-center justify-center relative overflow-hidden">
+                            class="w-full md:w-1/3 aspect-[4/3] bg-black/50 rounded-xl border border-white/10 flex items-center justify-center relative overflow-hidden group-hover:border-white/20 transition-colors">
                             <!-- Abstract Document Visualization -->
                             <div
                                 class="absolute inset-0 bg-[linear-gradient(45deg,transparent_45%,rgba(255,255,255,0.05)_50%,transparent_55%)] bg-[length:200%_200%] animate-spin-slow opacity-50">
                             </div>
                             <i data-lucide="file-bar-chart-2"
-                                class="w-16 h-16 text-gray-600 group-hover:text-neon-purple transition-colors duration-500"></i>
+                                class="w-16 h-16 text-gray-600 group-hover:text-neon-purple transition-colors duration-500 group-hover:scale-110 transform"></i>
                         </div>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
     </section>
